--- a/packages/use-url-state/package.json
+++ b/packages/use-url-state/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ahooksjs/use-url-state",
+  "name": "@liuqiang1357/use-url-state",
   "version": "3.1.9",
   "description": "A hook that stores the state into url query parameters.",
   "main": "./lib/index.js",
@@ -19,9 +19,6 @@
   "scripts": {
     "build": "gulp && webpack-cli"
   },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.com/"
-  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alibaba/hooks/issues"
@@ -34,5 +31,9 @@
   "dependencies": {
     "ahooks": "^3.1.9",
     "query-string": "^6.9.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "webpack-cli": "^3.3.10"
   }
 }
